tests/ui/associated-type-bounds/bad-universal-in-dyn-in-where-clause.stderr
error: associated type bounds are not allowed in `dyn` types
  --> $DIR/bad-universal-in-dyn-in-where-clause.rs:7:19
   |
LL |     dyn for<'j> B<AssocType: 'j>:,
   |                   ^^^^^^^^^^^^^

error: aborting due to 1 previous error

